--- a/style.css
+++ b/style.css
@@ -1,15 +1,9 @@
-:root{
-    --border-seperation: red; 
-    --background-color: grey;
-    --font-colors: black; 
-    --highlight-color: lightpink; 
-}
 
 body {
-    background-color: var(--background-color);
+    background-color: white;
     font-size: 1em;
     width: 100%;
-    max-width: 3000px;
+    max-width: 2400px;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -17,14 +11,12 @@ body {
 .navigation {
     list-style: none;
     overflow: hidden;
-    border-style: solid;
     width: 100%;
     background-color: white;
-    height: 100px;
+    height: 10%;
     display: block;
     text-align: right;
 }
-
 
 .navigation li {
     display: inline-block; 
@@ -33,12 +25,13 @@ body {
 .navigation li a {  
     padding: 10px;
     text-decoration: none;
-    color: var(--font-colors);
+    color: black;
     justify-content: center;
 }
 .navigation li a:hover{
     cursor: pointer;
     text-decoration: underline;
+    color: pink;
 }
 .navimage {
     border-radius: 50%;
@@ -46,8 +39,80 @@ body {
     border: 5px solid transparent;
 }
 .navimage:hover {
-    border-color: #dcdcdc;
+    border-color: pink;
     cursor: pointer;
 
 }
+.center {
+    width: 100%;
+    border-style: solid;
+    height: 40em;;
+    text-align: center;
 
+}
+.google-logo {
+    margin-top: 10em;
+    margin-bottom: 1em;
+}
+
+.search input {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    border: 2px solid #d3d3d3;
+    width: 28%;
+    height: 40px;
+    border-radius: 30px;
+    font-size: 1.4em;
+    padding-left: 50px;
+    padding-right: 40px;
+    color: black;
+}
+
+input:hover {
+    box-shadow: 3px violet;
+ 
+}
+#magnifier-glass {
+    position:absolute;
+    margin-top: 36px;
+    margin-left: 20px;
+}
+#microphone {
+    position: absolute;
+    margin-top: 36px;
+    margin-left: -36px;
+}
+
+#lucky { 
+    width: 100%;
+
+}
+
+.btn {
+    background-color: #f0f0f0;
+    width: 8%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 10px;
+    border-color: transparent;
+    font-size: 15px;
+}
+
+.btn:hover{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    cursor: pointer;
+}
+
+
+footer {
+    height: 1em;
+    width: 100%;
+    display: block;
+}
+
+footer ul {
+    list-style: none;
+}
+footer ul li {
+    display: inline-block;
+}
