--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 
-body {
+body, html {
     background-color: white;
     font-size: 1em;
     width: 100%;
     max-width: 2400px;
-    margin: 0 auto;
+    max-height: 100vh;
+    margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    position: fixed;
+
 }
 
 .navigation {
@@ -13,17 +17,18 @@ body {
     overflow: hidden;
     width: 100%;
     background-color: white;
-    height: 10%;
+    height: 8vh;
     display: block;
     text-align: right;
 }
 
 .navigation li {
     display: inline-block; 
+    font-size: .9em;
 
 }
 .navigation li a {  
-    padding: 10px;
+    padding: 7px;
     text-decoration: none;
     color: black;
     justify-content: center;
@@ -31,22 +36,24 @@ body {
 .navigation li a:hover{
     cursor: pointer;
     text-decoration: underline;
-    color: pink;
 }
 .navimage {
     border-radius: 50%;
-    margin-right: 1em;
     border: 5px solid transparent;
 }
+#user-image{
+    margin-right: 1em;
+}
 .navimage:hover {
-    border-color: pink;
+    border-color: #E8E8E8;
     cursor: pointer;
 
 }
 .center {
     width: 100%;
+    height: 84vh;
     border-style: solid;
-    height: 40em;;
+    border-color: transparent;
     text-align: center;
 
 }
@@ -105,14 +112,36 @@ input:hover {
 
 
 footer {
-    height: 1em;
     width: 100%;
-    display: block;
+    height: 8vh;
+    justify-content: space-between;
+    background-color: #E8E8E8; 
+    display: flex;
+    position: fixed;
+    z-index: +1;
 }
 
 footer ul {
     list-style: none;
+
 }
 footer ul li {
     display: inline-block;
+    margin: 5px;
+    padding-top: 25px;
+
+}
+footer ul li a {
+    text-decoration: none;
+    font-size: 1em;
+    color: #686868;
+}
+footer ul li a:hover{
+    text-decoration: underline;
+}
+.footer-right {
+    margin-right: 30px !important;
+}
+.footer-left {
+    margin-left: -15px !important;
 }
