--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+f
 body, html {
     background-color: white;
     font-size: 1em;
@@ -52,15 +52,10 @@ body, html {
 .center {
     width: 100%;
     height: 84vh;
-    border-style: solid;
-    border-color: transparent;
     text-align: center;
+    flex: 1;
+}
 
-}
-.google-logo {
-    margin-top: 10em;
-    margin-bottom: 1em;
-}
 
 .search input {
     margin-top: 1em;
@@ -113,7 +108,7 @@ input:hover {
 
 footer {
     width: 100%;
-    height: 8vh;
+    height: auto;
     justify-content: space-between;
     background-color: #E8E8E8; 
     display: flex;
