--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ nav {
 }
 
 .navimage:hover {
-  box-shadow: 0 0 20px 0 #c8c8c8;
+  box-shadow: 0 0 15px 0 #888888;
   /* border: 2px solid #c8c8c8;  --> This makes my hover take more space, why? */
   cursor: pointer;
 }
