modified index and style

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 0.98em;
+  font-size: 0.97em;
   margin: 0;
 }
 
@@ -16,11 +16,12 @@ nav {
   display: flex;
   justify-content: flex-end;
   text-align: center;
-  margin: 10px;
 }
 
-.navigation {
-  margin-right: 20px;
+header > nav {
+  margin: 12px;
+  padding: 2px;
+  margin-right: 17px;
 }
 
 .navimage {
@@ -35,10 +36,132 @@ nav {
 
 a {
   text-decoration: none;
-  margin: 10px;
   color: black;
+  margin: 10px;
 }
 a:hover {
   text-decoration: underline;
   cursor: pointer;
+}
+
+/* Search Bar */
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 23vh;
+}
+
+.search {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  width: 580px;
+  height: 45px;
+  border: 1px solid #c0c0c0;
+  border-radius: 25px;
+}
+.search > input {
+  flex-grow: 1;
+  border: none;
+  outline: none;
+  font-size: 16px;
+}
+
+.search:hover {
+  box-shadow: 0 0 10px 0 #e8e8e8;
+}
+
+.search > i {
+  margin-top: 15px;
+  color: grey;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: 10px;
+  height: 10px;
+}
+
+#microphone:hover {
+  cursor: pointer;
+}
+
+.lucky {
+  padding-top: 25px;
+}
+
+.btn {
+  background-color: #f8f9fa;
+  border-radius: 3px;
+  border: none;
+  height: 40px;
+  padding: 0 20px;
+  margin: 0 5px;
+}
+
+.btn:hover {
+  box-shadow: 0 0 2px 0 gray;
+  cursor: pointer;
+}
+
+.bottom {
+  justify-content: space-between !important;
+  position: fixed;
+  background-color: #f8f9fa;
+  bottom: 0;
+  width: 100vw;
+  height: 50px;
+  align-items: center;
+}
+
+.footer-left {
+  display: flex;
+  justify-self: start;
+  padding-left: 20px;
+}
+
+.footer-right {
+  margin-right: 20px;
+  justify-content: flex-end;
+}
+
+@media (max-width: 630px) {
+  .bottom {
+    flex-direction: column;
+  }
+
+  .footer-left {
+    justify-content: center;
+  }
+  .footer-right {
+    justify-content: center;
+  }
+  .search {
+    width: 95vw;
+  }
+}
+
+@media (max-height: 522px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .center {
+    margin-bottom: 10px;
+  }
+
+  .bottom {
+    position: relative;
+  }
+}
+@media (max-height: 530px) and (max-width: 630px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .center {
+    margin-bottom: 10px;
+  }
+  .bottom {
+    position: relative;
+  }
 }
